@@ -1,3 +1,8 @@
+Wed Dec  2 17:00:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* encoding.c (enc_name, rb_enc_name_list_i, rb_enc_aliases_enc_i):
+	  make fstring instead of making each copies.
+
 Wed Dec  2 16:32:08 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* iseq.h: introduce ISEQ_COMPILE_DATA() macro.
